www/static/qula/style.css
/* ... */
.m-footer {
  display: none;
  padding: 15px 10px;
  text-align: center;
  line-height: 33px;
  background: #68aac2;
  position: relative;
  font-size: 14px;
}

.m-footer a {
  margin: 0 5px;
  color: #c5d7df;
  text-shadow: 1px 1px #3e86a8;
  flex: 1 1 auto;
}

.xs-show {
  display: none;
}
.aznav{
display:none;
}
/* 小于1024适配 */
@media (max-width: 1024px) {
.aznav{
display:block;
}
  .xs-hidden {
    display: none;
  }

  .xs-show {
    display: initial;
  }

  .topbar,
  .nav,
  .pc-footer {
    display: none;
  }

  .m-footer {
    display: flex;
  }

  .m-nav {
    display: flex;
    margin-bottom: 50px;
  }

  .header {
    height: 54px;
    background: #4baacd;
    line-height: 54px;
    border-bottom: 1px #4399b8 solid;
    padding: 0 10px;
  }

  .header .search-form {
    display: flex;
    width: 100%;
    position: absolute;
    top: 104px;
    left: 0;
    padding: 0 10px;
    margin: 0;
    z-index: 9;
  }

  .search-form .input-key {
    outline: 0 none;
    margin: 0;
    width: auto;
    flex: 1;
  }

  .search-form .btn-tosearch {
    color: #4caacd;
    border: 1px solid #A6D3E8;
    border-left: 0 none;
    background: #fff;
  }


  .header .m-user {
    display: block;
  }

  .header .logo a {
    width: auto;
    background: none;
    text-indent: 0;
    color: #fff;
    font-size: 28px;
    height: auto;
	line-height: 54px;
  }

  .row {
    margin: 0 auto;
  }

  .header,
  .nav,
  .container {
    width: 100%;
  }

  .container {
    margin: 5px auto;
  }

  .layout-col2 .item {
    width: 100%;
    display: flex;
	padding: 0 0 10px 10px;
  }

  .layout-col2 .item .image {
    width: 90px;
    max-height: none;
  }

  .layout-col2 .item .image img {
    height: 118px;
  }

  .layout-col2 .item dl {
    flex: 1 1 auto;
  }

  .tp-box {
    width: 100%;
    float: none;
    border-right: 0 none;
  }

  .tp-box .top {
    display: flex;
  }

  .tp-box .top dl {
    flex: 1 1 auto;
  }

  .tp-box h2 {
    border-top: solid 1px #A6D3E8;
    margin-top: 10px;
  }

  .layout .tp-box:first-child h2 {
    border-top: 0 none;
    margin-top: 0;
  }

  .layout,
  .layout2 {
    float: none;
    border: 0 none !important;
    background: none;
  }

  .row .layout-col1,
  .row .layout-col2 {
    width: 100% !important;
    margin: 0 auto;
  }

  .row .layout-col1 {
    margin-top: 0px;
  }

  .row-rank .layout-col1 {
    margin-top: 0px;
  }

  .txt-list-row5 .s1 {
    width: 20%;
  }

  .txt-list-row5 .s2,
  .txt-list-row5 .s3 {
    width: 40%;
  }

  .txt-list li:last-child {
    border-bottom: 0 none;
  }
}

/* 登陆 */
.grid {
  width: 90%;
  max-width: 580px;
  margin: 50px auto;
  border: 2px solid #C3DFEA;
  border-collapse: collapse;
  padding: 3px;
  font-size: 14px;
}

.grid caption {
  background-color: #E1ECED;
  border: solid 2px #C3DFEA;
  border-bottom: 0px;
  font-size: 14px;
  font-weight: bold;
  margin: auto;
  padding-bottom: 5px;
  padding-top: 5px;
  text-align: center;
  vertical-align: middle;
}

.grid td {
  background-color: #FFFFFF !important;
  border: 1px solid #C3DFEA;
  padding: 8px 10px;
  position: relative;
}

.grid .td-width {
  width: 22%;
}

.grid input,
.grid .select {
  border: 1px solid #A6D3E8;
  font: 14px/32px arial;
  height: 32px;
  margin-right: 5px;
  padding: 0 10px;
  /* -webkit-appearance: none; */
  border-radius: 4px;
  background: #fff;
}

.grid .text,
.grid .select {
  width: 80%;
}


.grid input:focus,
.grid .select:focus {
  border-color: #66afe9;
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
}

.red {
  color: #f00;
}


/* 小于980适配 */
@media (max-width: 1024px) {
  .grid {
    margin: 0 10px;
    max-width: 100%;
    width: calc(100% - (20px));
  }

  .grid .td-width {
    width: 32%;
  }

  .grid .text,
  .grid .select {
    width: 100%;
  }

  .grid .must {
    position: absolute;
    top: 15px;
    left: 3px;
  }

}

/* 排行榜 */
.row-rank .layout-col1,
.row-detail .layout-col1,
.row-section .layout-col1 {
  width: 100%;
  margin-right: 0;
  margin-bottom: 10px;
  float: none;
  padding-bottom: 0;
  border: 2px solid #88C6E5;
}

.row-rank .mr0 {
  margin-right: 0;
}

.row-rank .layout-tit,
.row-detail .layout-tit {
  border-bottom: 1px solid #88C6E5;
}

.tab-hd {
  float: right;
}

.tab-hd li {
  font-weight: normal;
  cursor: pointer;
  float: left;
  height: 31px;
  line-height: 31px;
  overflow: hidden;
  color: #999;
  padding: 0 8px;
}

.tab-hd .active {
  color: #333;
  border-bottom: 2px solid #88C6E5;
}

.row-rank .txt-list li {
  border-bottom: 0 none;
}

.row-rank .txt-list .s1 {
  max-width: 26px;
  font-style: italic;
  color: #999;
  font-family: "Verdana";
}

.row-rank .txt-list .s2 {
  width: 142px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.row-rank .txt-list .s5 {
  width: 36px;
  font-family: "Verdana";
  color: #999;
  text-align: right;
}

/* 小于980适配 */
@media (max-width: 1024px) {
  .row-rank .txt-list .s1 {
    width: 10%;
  }

  .row-rank .txt-list .s2 {
    width: 75%;
  }

  .row-rank .txt-list .s5 {
    width: 15%;
  }
}

/* 历史记录 */
.history-table {
  width: 100%;
  margin: 20px auto;
  border: 3px solid #A6D3E8;
  background: #FEF9EF;
  text-align: left;
  border-spacing: 0;
}

.history-table caption {
  margin: 0px;
  text-align: left;
  background-color: #A6D3E8;
  font-size: 14px;
  font-weight: bold;
  height: 30px;
  line-height: 30px;
  overflow: hidden;
  padding: 0 0 0 10px;
}

.history-table th {
  font-size: 14px;
}

.history-table th,
.history-table td {
  padding: 10px;
  border-bottom: solid 1px #DDDDDD;
}

@media (max-width: 1024px) {

  .history-box {
    padding: 10px;
  }

  .history-table {
    margin: 0 auto;
    border-width: 1px;
  }

  .history-table th,
  .history-table td {
    padding: 8px;
  }
}

/* 详情页 */
.row-detail {
  margin-bottom: 0;
}
/* ... */

